# jit_inventory

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
scripts/: init_db.sql
src/app/: flask_app.py
src/app/templates/: base.html  batch.html  credential_form.html  dashboard.html  device_detail.html  history.html  inventory.html  scan.html  settings.html
src/config/: settings.py
src/core/: fingerprinter.py  ip_utils.py  job_tracker.py  scanner.py
src/credentials/: __init__.py  aws_secrets.py  base.py  local.py  models.py
src/db/: connection.py  models.py
src/db/repositories/: device.py  scan.py
src/scheduler/: __init__.py  scheduler.py
src/snmp/: client.py  oids.py
src/vendors/: base.py  registry.py
src/vendors/arista/: __init__.py  collector.py
src/vendors/aruba/: __init__.py  clearpass.py  collector.py
src/vendors/bluecoat/: collector.py
src/vendors/checkpoint/: __init__.py  collector.py
src/vendors/cisco/: collector.py
src/vendors/dell/: collector.py
src/vendors/f5/: __init__.py  collector.py
src/vendors/fortinet/: __init__.py  collector.py
src/vendors/infoblox/: __init__.py  collector.py
src/vendors/juniper/: __init__.py  collector.py
src/vendors/opengear/: __init__.py  collector.py
src/vendors/paloalto/: __init__.py  collector.py
